force-app/main/default/objects/SFDC_520_QuoteLine__c/SFDC_520_QuoteLine__c.object-meta.xml
<CustomObject>
    <description>Individual line items in a quote, do not edit these lines, instead use the custom links on the Quote detail page to add new lines</description>
    <label>Quote Line</label>
    <nameField>
        <displayFormat>QL-{0000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>