force-app/main/default/objects/SFDC_520_QuoteLine__c/fields/Qty_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Qty_Ordered__c</fullName>
    <label>Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>